lessons query with RESTDataSource

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/scotthallock/c0d3-js6#readme",
   "dependencies": {
+    "@apollo/datasource-rest": "^5.0.2",
     "@apollo/server": "^4.4.1",
     "graphql": "^16.6.0"
   }
